[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
atk-sys = { git = "https://github.com/stinkstudios/sys", tag = "0.7.1", version = "0.7.1" }
cairo-sys-rs = { git = "https://github.com/stinkstudios/cairo", tag = "0.5.0", version = "0.7.1" }
gdk-pixbuf-sys = { git = "https://github.com/stinkstudios/sys", tag = "0.7.1", version = "0.7.1" }
gdk-sys = { git = "https://github.com/stinkstudios/sys", tag = "0.7.1", version = "0.7.1" }
gio-sys = { git = "https://github.com/stinkstudios/sys", tag = "0.7.1", version = "0.7.1" }
glib-sys = { git = "https://github.com/stinkstudios/sys", tag = "0.7.1", version = "0.7.1" }
gobject-sys = { git = "https://github.com/stinkstudios/sys", tag = "0.7.1", version = "0.7.1" }
pango-sys = { git = "https://github.com/stinkstudios/sys", tag = "0.7.1", version = "0.7.1" }
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
v3_6 = []
v3_8 = ["v3_6"]
v3_10 = ["v3_8"]
v3_12 = ["v3_10"]
v3_14 = ["v3_12"]
v3_16 = ["v3_14"]
v3_18 = ["v3_16"]
v3_20 = ["v3_18"]
v3_22 = ["v3_20"]
v3_22_26 = ["v3_22_6"]
v3_22_27 = ["v3_22_26"]
v3_22_29 = ["v3_22_27"]
v3_22_6 = ["v3_22"]

[lib]
name = "gtk_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgtk-3"
homepage = "http://gtk-rs.org/"
keywords = ["gtk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gtk"
name = "gtk-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.7.0"
