[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
cairo-sys-rs = { git = "https://github.com/stinkstudios/cairo", tag = "0.5.1", version = "0.7.1" }
glib-sys = { git = "https://github.com/stinkstudios/sys", tag = "0.7.1", version = "0.7.1" }
pango-sys = { git = "https://github.com/stinkstudios/sys", tag = "0.7.1", version = "0.7.1" }
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []

[lib]
name = "pango_cairo_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgtk-3"
homepage = "http://gtk-rs.org/"
keywords = ["gtk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "pango_cairo"
name = "pangocairo-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.8.1"
